--- a/NehalWebpage.html
+++ b/NehalWebpage.html
@@ -8,7 +8,12 @@
 	<h1>SMU Telecom</h1>
 	<p>SMUocks!!!</p>
 
-        <p>SMU is an expensive school</p>
+	<h2>Link to SMU webs</h2>
+	<p>HTML links are defined with the a tag. The link address is specified in the hreftrit/p>
+
+	<a href="htt//www.smu.edu/">This is a link</a>
+
+
 	</body>
         </html>
 
